# Learning_RobotFramework

./: .gitignore  ExemplosEscoposVariaveis.robot  ExemplosTiposVariaveis.robot  README.md  ResourceAPI.robot  TestCasesAPIBooks.robot  amazon_resources.robot  amazon_testes.robot  amazon_testes_gherkin_bdd.robot  log.html  output.xml  pyproject.toml  report.html  requirements.txt  tarefa3.robot  tarefa6.robot
Advanced_RobotFramework/API/: conferindo_json.robot  headers_params_auth.robot  post_with_template.robot
Advanced_RobotFramework/Tests/Process/: hello_world.py  (+2 more)
Basic_RobotFramework/Controller/: ResourceAPI.robot  amazon_resources.robot
Basic_RobotFramework/Tests/: amazon_testes.robot  amazon_testes_gherkin_bdd.robot
Basic_RobotFramework/Trabalhando com Variáveis/: ExemplosArgumentos.robot
Docs Úteis/: Anotações.txt  Anotações.txt.bak  Menção Honrosa - Libraries .txt  Mod06-O-que-e-API-v2_new.txt
Estruturas/: NewUsandoLoops.robot  UsandoLogs.robot  UsandoLoops.robot
Exercícios/: tarefa4.robot
Exercícios - Avançados/Tarefa_1/: tarefa1.robot
Exercícios_Avançados/: Tarefa-4_Exercício-1.robot  Tarefa-4_Exercício-2.robot
Exercícios_Avançados/Tarefa_1/: tarefa1.robot
Exercícios_Avançados/Tarefa_2/: Tarefa2.robot
Exercícios_Básicos/: tarefa6.robot
Resolução de Tarefas/: output.xml  tarefa5.robot  tarefa6.robot
Resolução de Tarefas/Resultado/: log.html  output.xml  report.html
Resultado/: log.html  output.xml  report.html
Scripts/: OpenBat_VarPath.py  VarPath.bat
Teste com KeyWord em Python/: Funcao-Python.robot
WebDriver/.wdm/: drivers.json
(+36 files in other folders)
