[tool.poetry]
name = "Learning_Robot"
version = "0.0.0"
description = "Aprendizado sobre Robot Framework"
authors = ["Tiago Gomes"]
license = "N\\A"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
RESTinstance = "^1.3.0"
robotframework-databaselibrary = "^1.2.4"
robotframework-faker = "^5.0.0"
robotframework-lint = "^1.1"
robotframework-pythonlibcore = "^3.0.0"
robotframework-requests = "^0.9.3"
robotframework-robocop = "^2.0.2"
robotframework-screencaplibrary = "^1.6.0"
robotframework-seleniumlibrary = "^6.0.0"
robotframework-tidy = "^2.3"
selenium = "^4.1.5"
robotframework = "^5.0.1"
chromedriver = "^2.24.1"
pytest = "^7.1.2"

[tool.poetry.scripts]
poetry = 'poetry.console:run'
VarPath = 'Scripts.OpenBat_VarPath:open_bat'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
